--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+inventory/
+roles/*
+!roles/requirements.yml
+.vault-pass
 
 # Created by https://www.gitignore.io/api/ansible
 # Edit at https://www.gitignore.io/?templates=ansible
