--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,7 @@
 [defaults]
+no_cows=true
 fact_caching=jsonfile
 fact_caching_connection=~/.ansible/facts.json
 fact_caching_timeout=0
+roles_path=./roles
+collections_path=./collections
