--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,5 +3,6 @@ no_cows=true
 fact_caching=jsonfile
 fact_caching_connection=~/.ansible/facts.json
 fact_caching_timeout=0
-roles_path=./roles
-collections_path=./collections
+roles_path=roles
+collections_path=collections
+vault_password_file=.vault-pass
